Line-height on titles

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -10,6 +10,7 @@
     border-top: @gray-7 1px solid;
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
+    line-height: 1.7rem;
     color: @gray-2;
  }
 
@@ -91,6 +92,8 @@
     color: @heritage-blue;
     border: solid @aqua;
     border-width: 1px 1px 1px 1px;
+    font-size: @font-size-base;
+    font-weight: @font-weight-bolder;
 
     .btn-icon(@i-right,@color:@heritage-blue);
 
