Fixed sign out button

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -12,7 +12,7 @@
  */
 
 @text-color:            	#191926;
-@brand-primary:         	#253460; // Blue
+@brand-primary:         	@heritage-blue;
 @brand-secondary:       	@aqua;
 
 /***************************************************************************
