--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -183,3 +183,16 @@ input.main-header__search__input {
         top: 0;
      }
 }
+
+.main-header__logout__button,
+.main-header__logout__button:hover {
+    background: none;
+    border: none;
+    padding: 0;
+    font-weight: normal;
+    color: @heritage-blue;
+}
+
+.main-header__logout {
+    display: inline-block;
+}
