Adjust margin on blockLinks

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -86,7 +86,7 @@
 }
 
 .blockLinks {
-    margin: @box-spacing-vertical;
+    margin: @box-spacing-vertical 0;
     padding: @box-spacing-vertical;
     background-color: @aqua-light;
     color: @heritage-blue;
