Styling on principles.jade

--- a/libs/jade/principles.jade
+++ b/libs/jade/principles.jade
@@ -12,7 +12,7 @@ block content
 	.articleContent.row
 		.span8
 			p.u-lede These design principles are rooted in our #[a(href="#") advice proposition] by referring back to them and developing from them, along with our #[a(href="#") content style guide] we will create a consistent and valuable digital advice service. 
-			#overview.steps
+			nav
 				h3 On this page
 					ol
 						li
