--- a/libs/template/sidebar-modules.jade
+++ b/libs/template/sidebar-modules.jade
@@ -6,8 +6,8 @@
 	{href: "section-notice.html", title: "Section Notices"},
 	{href: "toolbar.html", title: "Content toolbar"},
 	{href: "cookie-monster.html", title: "Cookie Monster"},
-	{href: "notice.html", title: "Browser notice"},
-	{href: "extent.html", title: "Extent Switcher"},
-	{href: "overlay.html", title: "Modal/Overlay"},
-	{href: "reference.html", title: "Reference tool"}
+	{href: "notice.html", title: "Browser notice"}
+	//{href: "extent.html", title: "Extent Switcher"},
+	//{href: "overlay.html", title: "Modal/Overlay"},
+	//{href: "reference.html", title: "Reference tool"}
 ])
