Added well styles to the callout page

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -217,3 +217,29 @@ block content
 					| 	&lt;h3&gt;Callout generous&lt;/h3&gt;
 					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/div&gt;
+
+			h2 Wells
+
+			p These are a variation on callouts that are only used in tools, to help organise forms and layouts.
+
+			.example-box-plain
+				.well
+					h3 Well
+					p Lorem ipsum.
+			pre
+				code.language-html
+					| &lt;div class="well"&gt;
+					| 	&lt;h3&gt;Well&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+					| &lt;/div&gt;
+
+			.example-box-plain
+				.well--outline
+					h3 Outline well
+					p Lorem ipsum.
+			pre
+				code.language-html
+					| &lt;div class="well--outline"&gt;
+					| 	&lt;h3&gt;Outline well&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+					| &lt;/div&gt;
