Stopped revealables styling headers

--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -47,9 +47,9 @@
     .collapse-content, // This needs to be removed eventually
     .revealable__content {
         border-bottom: 1px solid @revealable-border;
-        h1, h2, h3, h4, h5, h6 {
+        /*h1, h2, h3, h4, h5, h6 {
             color: @revealable-heading;
-        }
+        }*/
     }
 }
 
