Fixed typeface on callout ::before content

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -85,7 +85,7 @@
 		.callout--border;
 		.callout--border--left;
 	    &:before {
-	        font-family: 'cab-icons';
+	        font-family: 'open sans', 'cab-icons';
 	        font-size: .85rem;
 	        font-weight: 300;
 	        content: @icon;
