Add block to link style

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -94,6 +94,7 @@
     border-width: 1px 1px 1px 1px;
     font-size: @font-size-base;
     font-weight: @font-weight-bolder;
+    display: block;
 
     .btn-icon(@i-right,@color:@heritage-blue);
 
