Added inline block to buttons, for using on links

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -11,6 +11,7 @@
     color: @btn-text;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
+    display: inline-block;
     &:hover,
     &:focus,
     &:active {
