Border on :hover fix for blockLinks

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -110,6 +110,7 @@
     &:active {
         background-color: darken(@aqua-light, 10%);
         border: solid @aqua;
+        border-width: 1px 1px 1px 1px;
     }
 }
 
