--- a/libs/guide.less
+++ b/libs/guide.less
@@ -181,7 +181,7 @@ figure {
     background-color: @heritage-blue-lightest;
     border: 1px solid @blue-light;
     border-radius: @form-border-radius;
-    padding: 1;
+    padding: 1rem;
     margin: 0 !important; // Added important as it's being overwritten in the normalize
     img {
         border: 0px solid @white;
@@ -190,7 +190,7 @@ figure {
 }
 figcaption {
     display: block;
-    padding: .5 0 0 0;
+    padding: .5rem 0 0 0;
 }
 
 // For code
