--- a/libs/jade/descriptions.jade
+++ b/libs/jade/descriptions.jade
@@ -28,7 +28,7 @@ block content
 			.example-box-plain
 				label Caption
 				figure
-					img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+					img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 					figcaption Advisers being trained in a local Citizens Advice.
 			pre
 				code.language-html
@@ -45,7 +45,7 @@ block content
 			.example-box-plain
 				label Alt
 				figure
-					img(src="assets/images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?")
+					img(src="images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?")
 			pre
 				code.language-html
 					| &lt;figure&gt;
