--- a/libs/jade/descriptions.jade
+++ b/libs/jade/descriptions.jade
@@ -39,7 +39,7 @@ block content
 
 			h4 Alt attributes
 			p Alt attributes should be considered as image replacements, though not solely for the purpose of screenreaders, though their benefit for this use is very high, they can also be used in case a person is on a low bandwidth.
-			p When considering what to use as a description in an alt tag, always think of the context, where is it on the page and what is the image conveying? You can use #[a.a-external-link(href="http://dev.w3.org/html5/alt-techniques/#tree", target="_blank") this simple design tree] to help decide whether to use #[a.a-external-link(href="http://webaim.org/techniques/alttext/", target="_blank") WebAIM also has some examples] of how best to describe images in alt attributes.
+			p When considering what to use as a description in an alt tag, always think of the context, where is it on the page and what is the image conveying? You can use #[a.a-external-link(href="http://dev.w3.org/html5/alt-techniques/#tree", target="_blank") this simple design tree] to help decide whether to use, and #[a.a-external-link(href="http://webaim.org/techniques/alttext/", target="_blank") WebAIM also has some examples] of how best to describe images in alt attributes.
 			p You can add a link from the image to a description further down the page, which can be read by a screenreader, but this could affect the flow for the user. In this instance it is best to use an alt label of just the question. It will enable the screenreader user to understand what is being explained below without adding confusion.
 
 			.example-box-plain
