--- a/libs/modules/dialog.less
+++ b/libs/modules/dialog.less
@@ -149,7 +149,9 @@
 		.dialog__close {
 			position: absolute;
 			color: @gray-3;
-			top: @box-spacing-vertical*2.5;
+			top: @box-spacing-vertical*2;
+    		padding: .75rem 1rem;
+    		z-index: 2;
 			&:hover {
 				color: @heritage-blue;
 			}
