Fixed spacing and float left issue

--- a/libs/modules/content-index.less
+++ b/libs/modules/content-index.less
@@ -17,10 +17,6 @@
     &:last-child {
         margin-bottom: @box-spacing*2;
     }
-
-    & > * {
-        float: left;
-    }
 }
 
 .content__header {
@@ -58,5 +54,8 @@
 }
 
 .beta-index-page__section {
-    padding-bottom: 1.25rem;
+    padding-bottom: 1rem;
+    ul {
+        margin-bottom: 0;
+    }
 }
