Remove border from images

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -299,14 +299,14 @@ pre[class*="language-"] {
         img {
             border-radius: 0;
             border: solid @gray-7;
-            border-width: 0 0 1px 0;
+            border-width: 0;
         }
     }
     .card-image-left {
         img {
             border-radius: @form-border-radius 0 0 0;
             border: solid @gray-7;
-            border-width: 0 1px 0 0;
+            border-width: 0;
         }
     }
     .card-text-left {
