--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -59,7 +59,7 @@ html
 			header.main-header
 				.main-header__content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(onerror="this.onerror=null;this.src='images/logos/ca-logo_100px.svg.png';", alt="Citizens Advice", src="images/ca-logo_100px.svg")
+						img(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-280px.svg" height="80")
 					a.main-header__logo.no-print.wide(href="index.html", title="Citizens Advice home")
 						img(onerror="this.onerror=null;this.src='images/logos/ca-logo-hz-white-280px.svg.png';", alt="Citizens Advice", src="images/ca-logo-hz-white-280px.svg")
 					a.main-header__logo.print-only(href="index.html", title="Citizens Advice home")
