Added hover state to a, even without href

--- a/libs/base/global.less
+++ b/libs/base/global.less
@@ -20,6 +20,7 @@ a {
     text-decoration: none;
     // Stop very long links breaking small mobile viewports
     word-wrap: break-word;
+    cursor: pointer;
 }
 
 a:hover, a:focus, a:focus {
