--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -30,6 +30,7 @@
         background-color: @gray-8;
         .side-nav-beta__sibling a:hover {
             background-color: @gray-6;
+            cursor: pointer;
         }
     }
     .-visited {
