--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -94,23 +94,6 @@
             border: none;
         }
     }
-    /*.side-nav-beta__heading + li {
-        display: block;
-    }
-    @media screen and (max-width: @screen-xs-max) {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        max-height: 100%;
-        overflow: scroll;
-        background-color: @white;
-        margin: 0;
-        box-shadow:  0px -2px 0px 0px @gray-7;
-        .side-nav-beta__heading + li {
-            display: none;
-        }
-    }*/
 }
 
 .side-nav {
@@ -339,3 +322,50 @@ html[lang="en-SCT"] .side-nav > h2 {
     background: @heritage-blue;
 }
 
+// These are the new styles for the sidebar that sticks to the bottom of the page on mobile. To use these wrap the normal sidebar in div.sticky-sidebar
+.sticky-sidebar {
+    background-color: none;
+    &.expanded {
+        background-color: fade(@black,45%);
+    }
+    @media screen and (max-width: @screen-xs-max) {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+    }
+    .side-nav-beta__heading {
+        @media screen and (max-width: @screen-xs-max) {
+            .btn-icon(@i-plus,@color:@heritage-blue);
+            cursor: pointer;
+            .expanded& {
+                .btn-icon(@i-minus,@color:@heritage-blue);
+            }
+        }
+        & + li {
+            display: block;
+        }
+    }
+    .side-nav-beta {
+        @media screen and (max-width: @screen-xs-max) {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            max-height: 100%;
+            overflow: scroll;
+            background-color: @white;
+            margin: 0;
+            box-shadow:  0px -2px 0px 0px @gray-7;
+            .side-nav-beta__heading + li {
+                display: none;
+            }
+            .expanded& .side-nav-beta__heading + li {
+                display: block;
+            }
+        }
+    }
+}
