--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -20,7 +20,8 @@ table {
     }
 }
 tr > td {
-    border: solid @gray-6;
+    border-color: @gray-6;
+    border-style: solid;
     border-width: 0 1px 0 0;
 }
 
