--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -33,7 +33,8 @@ th {
     vertical-align: top;
 }
 tr {
-    border: solid @gray-6;
+    border-color: @gray-6;
+    border-style: solid;
     border-width: 1px 0;
     &:nth-child(odd) {
         //background-color: @white;
@@ -42,7 +43,8 @@ tr {
         //background-color: @gray-8;
     }
     & > td {
-        border: solid @gray-6;
+        border-color: @gray-6;
+        border-style: solid;
         border-width: 0 1px 0 0;
         &:last-child {
             border: none;
