--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -14,7 +14,8 @@
     display: inline-block;
     &:hover,
     &:focus,
-    &:active {
+    &:active,
+    &:visited {
         & when (@btn-background = @btn-border) {
             border: 1px solid @btn-background-hover;
         }
