Adjust logo scale on mobile

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -58,12 +58,12 @@
         background-color: @heritage-blue;
         padding: .5rem 0;
         img {
-            max-width: 70%;
-            padding: .5 0;
+            max-width: 60%;
+            padding: .65rem;
         }
         @media ( max-width: @screen-xs-max ) {
             display: block;
-            text-align: center;
+            //text-align: center;
             margin: 0;
         }
     }
