--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -279,7 +279,7 @@ table.simple-table td {
 // Collapsible tables
 .table-collapse {
     background: none;
-    display: none;
+    //display: none;
     &--toggle {
         cursor: pointer;
         & td:first-of-type:before {
