--- a/libs/site.less
+++ b/libs/site.less
@@ -85,6 +85,10 @@
 @import "modules/cards";
 @import "modules/blog";
 
+// Styles for new main navs
+@import "modules/main-nav-v1";
+@import "modules/main-nav-v2";
+
 /* IE styles */
 @import "base/ie";
 
