--- a/libs/site.less
+++ b/libs/site.less
@@ -83,6 +83,10 @@
 @import "modules/adviser";
 @import "modules/notice";
 
+// Styles for new main navs
+@import "modules/main-nav-v1";
+@import "modules/main-nav-v2";
+
 /* IE styles */
 @import "base/ie";
 
