--- a/libs/template/template-v2.jade
+++ b/libs/template/template-v2.jade
@@ -70,7 +70,10 @@ html
 						li
 							a Get Involved
 					.search
-						input(type="search")
+						.field-group.field-group--buttons
+							input(type="search", placeholder="Search")
+							div(style="display:table-cell;")
+							button.btn.btn-primary &nbsp;
 
 			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
