Added mobile breakpoint

--- a/libs/jade/content-v2.jade
+++ b/libs/jade/content-v2.jade
@@ -26,9 +26,9 @@ block sidebar
         ],0)
 
 block section-notice
-    aside.section-notice
+    aside.section-notice--dev
         h2.screenreader Notice
-        .section-notice__content
+        .section-notice--dev__content
             p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
 
 block content
