--- a/libs/template/template-v2.jade
+++ b/libs/template/template-v2.jade
@@ -64,16 +64,17 @@ html
 
 			#main-nav-2--nav
 				.content
+					.search
+						.field-group.field-group--buttons
+							input(type="search", placeholder="Search")
+							div(style="display:table-cell;")
+							button.btn.btn-primary
+								i.icon-search
 					ul
 						li
 							a Get Advice
 						li
 							a Get Involved
-					.search
-						.field-group.field-group--buttons
-							input(type="search", placeholder="Search")
-							div(style="display:table-cell;")
-							button.btn.btn-primary &nbsp;
 
 			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
