--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -19,7 +19,11 @@
 			padding-right: 1rem;
 			li {
 				display: inline;
-				padding-left: 1.5rem;
+				padding-left: 1.5em;
+				@media screen and (max-width: @screen-xs-max) {
+					font-size: @font-size-small;
+					padding-left: .75em;
+			    }
 				a {
 					color: @white;
 					border: none;
@@ -42,11 +46,9 @@
         position: relative;
 		ul {
 			list-style: none;
-			display: inline-block;
+		    display: block;
 			margin: 0;
 			padding: 0;
-			.vertical-align(absolute);
-			height: 100%;
 			li {
 				display: inline;
 				a {
@@ -60,8 +62,19 @@
 						background-color: @heritage-blue-lightest;
 						color: @heritage-blue;
 					}
+					@media screen and (max-width: @screen-xs-max) {
+						padding: 1rem 0;
+						text-align: center;
+						width: 50%;
+						float: left;
+					}
 				}
 			}
+			@media screen and (min-width: @screen-sm-min) {
+				display: inline-block;
+				.vertical-align(absolute);
+				height: 100%;
+		    }
 		}
 		.search {
 			display: inline-block;
@@ -69,19 +82,21 @@
 			padding: .5rem 1rem;
 			input {
 				border: none;
-				width: 300px;
+				width: 250px;
 				padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
-				.btn-icon(@i-search);
 			}
 			button {
 				border: none;
 				padding: @box-spacing-vertical/2 @box-spacing-horizontal;
-				.btn-icon(@i-search);
-				&:after {
-					top: 48%;
-					padding-right: .45rem;
-				}
 			}
+			@media screen and (max-width: @screen-xs-max) {
+		        display: block;
+		        width: 100%;
+		        input,
+		        button {
+		        	width: 100%;
+		        }
+		    }
 		}
     }
 }
