--- a/libs/jade/content-v1.jade
+++ b/libs/jade/content-v1.jade
@@ -29,10 +29,12 @@ block sidebar
 //        ])
 
 block section-notice
-    aside.section-notice
+    aside.section-notice--dev
         h2.screenreader Notice
-        .section-notice__content
-            p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
+        .section-notice--dev__content
+            p
+                span.badge NEW
+                | This page is new – #[a(href="#") your feedback] will help us to improve it.
 
 block content
     .articleContent
