--- a/libs/template/template-v2.jade
+++ b/libs/template/template-v2.jade
@@ -71,40 +71,54 @@ html
 							button.btn.btn-primary
 								i.icon-search
 					ul
-						li
+						li#get-advice
 							a Get Advice
-						li
+						li#get-involved
 							a Get Involved
 
-			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
-				ul.nav-list-primary
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Benefits
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Work
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Debt and money
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Consumer
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Relationships
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Housing
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Law and rights
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Discrimination
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Tax
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Healthcare
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") Education
-					li.top-item.js-mega-menu(style="display: list-item;")
-						a(href="#") More from us
-					li.nav-list-primary-more.js-more-menu(style="display: none;")
-						a(href="#") More
-							i.icon-down
+			#main-nav-2--dropdown(style="display:none;")
+				.content
+					ul.span4
+						li
+							a(href="") Benefits
+							br
+							| Some description
+						li
+							a(href="") Work
+							br
+							| Some description
+						li
+							a(href="") Debt and money
+							br
+							| Some description
+						li
+							a(href="") Relationship
+							br
+							| Some description
+						li
+							a(href="") Housing
+							br
+							| Some description
+						li
+							a(href="") Law and rights
+							br
+							| Some description
+						li
+							a(href="") Discrimination
+							br
+							| Some description
+						li
+							a(href="") Tax
+							br
+							| Some description
+						li
+							a(href="") Healthcare
+							br
+							| Some description
+						li
+							a(href="") Education
+							br
+							| Some description
 
 		else if loginheader
 			aside.section-notice__login
