--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -53,6 +53,7 @@
 				display: inline;
 				a {
 					color: @heritage-blue;
+					font-weight: @font-weight-bold;
 					padding: 1rem;
 					height: 100%;
 					border: none;
@@ -118,7 +119,7 @@
 			padding-left: 0;
 			width: 100%;
 		    column-count: 3;
-		    column-gap: 2rem;
+		    column-gap: 3rem;
 		    li {
 		    	break-inside: avoid-column;
 		    	a {
@@ -126,7 +127,7 @@
 		    	}
 		    }
 			@media screen and (max-width: @screen-xs-max) {
-		    	column-count: 2;
+		    	column-count: 1;
 			}
 		}
 	}
