--- a/libs/template/template-v2.jade
+++ b/libs/template/template-v2.jade
@@ -82,43 +82,51 @@ html
 						li
 							a(href="") Benefits
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Work
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Debt and money
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") Consumer
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Relationship
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Housing
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Law and rights
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Discrimination
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Tax
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Healthcare
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 						li
 							a(href="") Education
 							br
-							| Some description
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						li
+							a(href="") More from us
+							br
+							| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 		else if loginheader
 			aside.section-notice__login
