--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -47,8 +47,7 @@
 		ul {
 			list-style: none;
 		    display: block;
-			margin: 0;
-			margin-left: 1rem;
+			margin: 0 1rem;
 			padding: 0;
 			li {
 				display: inline;
@@ -61,7 +60,7 @@
 					display: inline-block;
 					line-height: 2.3em;
 					&:hover {
-						background-color: @heritage-blue-lightest;
+						background-color: @heritage-yellow-lighter;
 						color: @heritage-blue;
 					}
 					@media screen and (max-width: @screen-xs-max) {
@@ -73,7 +72,7 @@
 				}
 				&.active a {
 					color: @heritage-blue;
-					background-color: @heritage-blue-lightest;
+					background-color: @heritage-yellow-lighter;
 				}
 			}
 			@media screen and (min-width: @screen-sm-min) {
@@ -108,7 +107,7 @@
 }
 
 #main-nav-2--dropdown {
-	background-color: @heritage-blue-lightest;
+	background-color: @heritage-yellow-lighter;
 	overflow: hidden;
 	border-bottom: 2px solid @white;
 	.content {
