--- a/libs/template/template-v1.jade
+++ b/libs/template/template-v1.jade
@@ -65,12 +65,61 @@ html
 					a(href="index.html")
 						img(src="images/ca-logo-hz-280px.svg")
 					ul
-						li
+						li.submenu
 							a Get Advice
+						ul
+							.menu
+								ul.span4
+									li
+										a(href="") Benefits
+										br
+										| Some description
+									li
+										a(href="") Work
+										br
+										| Some description
+									li
+										a(href="") Debt and money
+										br
+										| Some description
+									li
+										a(href="") Relationship
+										br
+										| Some description
+									li
+										a(href="") Housing
+										br
+										| Some description
+									li
+										a(href="") Law and rights
+										br
+										| Some description
+									li
+										a(href="") Discrimination
+										br
+										| Some description
+									li
+										a(href="") Tax
+										br
+										| Some description
+									li
+										a(href="") Healthcare
+										br
+										| Some description
+									li
+										a(href="") Education
+										br
+										| Some description
+
 						li
 							a Get Involved
+
 					.search
-						input(type="search")
+						.field-group.field-group--buttons
+							input(type="search", placeholder="Search")
+							div(style="display:table-cell;")
+							button.btn.btn-primary
+								i.icon-search
 
 			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
