--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -49,25 +49,30 @@
 		    display: block;
 			margin: 0 1rem;
 			padding: 0;
+			@media screen and (max-width: @screen-xs-max) {
+				border-top: 1px solid white;
+				margin: 0;
+			}
 			li {
 				display: inline;
 				a {
 					color: @heritage-blue;
 					font-weight: @font-weight-bold;
-					padding: 1rem;
-					height: 100%;
+					padding: 0 1rem;
+					//height: 100%;
 					border: none;
 					display: inline-block;
-					line-height: 2.3em;
+					line-height: 4.3em;
 					&:hover {
 						background-color: @heritage-yellow-lighter;
 						color: @heritage-blue;
 					}
 					@media screen and (max-width: @screen-xs-max) {
-						padding: 1rem 0;
+						//padding: 1rem 0;
 						text-align: center;
 						width: 50%;
 						float: left;
+						line-height: 3.2em;
 					}
 				}
 				&.active a {
@@ -85,6 +90,10 @@
 			display: inline-block;
 			float: right;
 			padding: .5rem 1rem;
+			@media screen and (max-width: @screen-xs-max) {
+				float: none;
+				background-color: @heritage-blue-lightest;
+			}
 			input {
 				border: none;
 				width: 250px;
@@ -109,10 +118,10 @@
 #main-nav-2--dropdown {
 	background-color: @heritage-yellow-lighter;
 	overflow: hidden;
-	border-bottom: 2px solid @white;
+	border-bottom: 1px solid @white;
 	.content {
 		max-width: @breakpoint-lg;
-		padding: 1.5rem 1rem;
+		padding: 1.5rem 1.5rem 1.5rem-1rem 1.5rem;
 		margin: 0 auto;
 		overflow: hidden;
 		ul {
@@ -121,9 +130,10 @@
 			width: 100%;
 		    column-count: 3;
 		    column-gap: 4rem;
+		    margin: 0;
 		    li {
 		    	break-inside: avoid-column;
-				padding-bottom: .5rem;
+				margin-bottom: 1rem;
 		    	a {
 		    		font-weight: bold;
 		    	}
