--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -50,7 +50,6 @@
 			margin: 0 1rem;
 			padding: 0;
 			@media screen and (max-width: @screen-xs-max) {
-				border-top: 1px solid white;
 				margin: 0;
 			}
 			li {
@@ -93,6 +92,8 @@
 			@media screen and (max-width: @screen-xs-max) {
 				float: none;
 				background-color: @heritage-blue-lightest;
+				padding: 0;
+				//border-bottom: 1px solid white;
 			}
 			input {
 				border: none;
@@ -109,6 +110,10 @@
 		        input,
 		        button {
 		        	width: 100%;
+
+		        	margin: 0;
+		        	padding: 0.75rem 1rem;
+		        	border-radius: 0;
 		        }
 		    }
 		}
@@ -118,7 +123,6 @@
 #main-nav-2--dropdown {
 	background-color: @heritage-yellow-lighter;
 	overflow: hidden;
-	border-bottom: 1px solid @white;
 	.content {
 		max-width: @breakpoint-lg;
 		padding: 1.5rem 1.5rem 1.5rem-1rem 1.5rem;
