Commented out key icon css, as it doesn't add anything

--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -6,7 +6,7 @@
         margin: 0 auto;
         position: relative;
 		img {
-			width: 210px;
+			width: 220px;
 			display: block;
 		}
 		ul {
@@ -31,14 +31,14 @@
 						text-decoration: underline;
 					}
 				}
-				a.sign-in {
+				/*a.sign-in {
 					//background-color: red;
 					&:after {
 						content: @i-key;
 						.icon;
 						margin-left: .4em;
 					}
-				}
+				}*/
 			}
 		}
 	}
