--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -69,7 +69,7 @@
 					//height: 100%;
 					border: none;
 					display: inline-block;
-					line-height: 4.3em;
+					line-height: 3.25em;
 					&:hover {
 						background-color: @heritage-yellow-lighter;
 						color: @heritage-blue;
@@ -79,7 +79,7 @@
 						text-align: center;
 						width: 50%;
 						float: left;
-						line-height: 3.2em;
+						//line-height: 3.2em;
 					}
 				}
 				&.active a {
@@ -96,7 +96,7 @@
 		.search {
 			display: inline-block;
 			float: right;
-			padding: .5rem 1rem;
+			padding: 0 1rem;
 			@media screen and (max-width: @screen-xs-max) {
 				float: none;
 				background-color: @heritage-blue-lightest;
