--- a/libs/modules/main-nav-v1.less
+++ b/libs/modules/main-nav-v1.less
@@ -1,22 +1,16 @@
 #main-nav-1--branding {
     background-color: @heritage-blue;
-    padding: 0.5rem;
     .content {
         max-width: @breakpoint-lg;
-        padding: .75rem 1rem;
+        padding: .5rem 1rem;
         margin: 0 auto;
         position: relative;
-        img {
-            width: 280px;
-            display: block;
-        }
+        text-align: right;
         ul {
             list-style: none;
             display: inline-block;
             margin: 0;
-            .vertical-align(absolute);
-            right: 0;
-            padding-right: 1rem;
+            //padding-right: 1rem;
             li {
                 display: inline;
                 padding-left: 1.5rem;
@@ -36,35 +30,43 @@
     background-color: @heritage-blue-lighter;
     .content {
         max-width: @breakpoint-lg;
-        //padding: 1rem;
+        padding: 0 1rem;
         margin: 0 auto;
         overflow: hidden;
-        position: relative;
-        img {
-            width: 220px;
-            display: block;
-            list-style: none;
-            display: block;
-            margin: 0;
-            padding: 0;
-            position: absolute;
-            top: 50%;
-            -webkit-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-            height: 100%;        }
+        display: table;
+        width: 100%;
+        a.logo {
+            border: none;
+            display: table-cell;
+            vertical-align: middle;
+            //position: relative;
+            overflow: hidden;
+            img {
+                width: 220px;
+                display: block;
+                list-style: none;
+                //margin: 1rem;
+                padding: 1rem 0;
+                //.vertical-align(absolute);
+            }
+        }
         ul {
             list-style: none;
-            display: block;
-            left: 400px;
-            margin: 0;
+            display: table-cell;
+            vertical-align: middle;
             padding: 0;
-            .vertical-align(absolute);
-            height: 100%;
+            //margin: 1rem 0;
+            text-align: right;
+            //margin-left: 236px;
+            //.vertical-align(absolute);
             li {
                 display: inline-block;
                 font-weight: @font-weight-bolder;
-                padding: 1rem;
+                padding: 0;
+                margin: 0;
+                margin-right: 1rem;
+                line-height: 1rem;
+                //float: left;
                 //background-color: @white;
                 &:hover {
                     background-color: @heritage-blue-lighter;
@@ -73,39 +75,38 @@
                 }
                 a {
                     background-color: @white;
-                    padding: 0 .5rem;
+                    padding: @box-spacing-vertical/1.2 @box-spacing-horizontal/2;
                     border-radius: 2px;
                     color: @heritage-blue;
-                    height: 100%;
+                    //height: 100%;
                     display: inline-block;
-                    line-height: 2.5rem;
-                    font-size: @font-size-base;
+                    //line-height: 2.5rem;
+                    //font-size: @font-size-base;
                     border: none;
                     &:after {
-                        font-family: 'open_sans', 'cab-icons';
-                        font-size: .85rem;
                         font-weight: 300;
                         content: @i-down;
-                        line-height: 1em;
-                        display: inline-block;
-                        margin: 0;
-                        padding: 0 0 0 @box-spacing-horizontal;
+                        padding: 0 0 0 @box-spacing-horizontal/2;
+                        .icon;
+                        font-size: @font-size-small;
 
                     }
                 }
             }
         }
         .search {
-            display: inline-block;
-            float: right;
-            padding: .5rem 1rem;
+            display: table-cell;
+            vertical-align: middle;
+            //float: right;
             input {
                 border: none;
-                width: 250px;
+                width: 100%;
                 padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
             }
             button {
                 border: none;
+                width: 100%;
+                margin: 0;
                 padding: @box-spacing-vertical/2 @box-spacing-horizontal;
             }
             @media screen and (max-width: @screen-xs-max) {
@@ -117,45 +118,21 @@
                 }
             }
         }
-    }
-}
-
-.main-nav {
-    display: none;
-}
-
-
-/***************************************************************************
- * Header development
- * V1 #header1
- */
-
-
-    #header1 .main-header__top-nav {
-        clear: both;
-        margin: .5em -.4em .2em 0;
-        text-align: right;
-        width: 100%; // For old IE
-        background-color: @heritage-blue-lighter;
-        color: @white;
-        float: none;
-        max-width: calc(100%);
-        .content {
-            .limit-width(@max-page-width);
-            margin: 0 auto;
-            background-color: transparent;
-            padding: @box-spacing-vertical/2 @box-spacing-horizontal;
-            max-width: @breakpoint-lg;
-            & > a {
-                padding: .4em;
-                color: @white;
-                display: inline-block;
-                white-space: nowrap;
-                border: none;
+        .burger {
+            display: none;
+            vertical-align: middle;
+            padding-left: 1rem;
+            font-size: 1rem;
+            text-align: right;
+        }
+        @media screen and (max-width: 820px) {
+            ul,
+            .search {
+                display: none;
+            }
+            .burger {
+                display: table-cell;
             }
         }
     }
-
-    #header1 .main-header__top-nav__link--current {
-        font-weight: bold;
-    }
+}
